Make project buildable.