@@ -15,19 +15,46 @@
         Mockito mock-maker-inline is useful when you want to mock final class/method without using PowerMock.
         See issue: https://github.com/mockito/mockito/issues/1110
     </description>
+	
+    <properties>
+        <powermock.version>2.0.9</powermock.version>
+        <mockito2.version>2.21.0</mockito2.version>
+        <assertj-core.version>3.5.2</assertj-core.version>
+        <commons-lang3.version>3.4</commons-lang3.version>
+		
+		<maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
+	
+	  <build>
+		<plugins>
+		  <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<configuration>
+			  <argLine>
+				--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.base=ALL-UNNAMED
+			  </argLine>
+			</configuration>
+		  </plugin>
+		</plugins>
+	  </build>
 
     <dependencies>
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-core</artifactId>
+			<version>${powermock.version}</version>
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito2</artifactId>
+			<version>${powermock.version}</version>
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-module-junit4</artifactId>
+			<version>${powermock.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
@@ -38,11 +65,18 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
+			<version>${assertj-core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
+			<version>${commons-lang3.version}</version>
         </dependency>
+		<dependency>
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy</artifactId>
+			<version>LATEST</version>
+		</dependency>	
     </dependencies>
 
 </project>
